<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.project.depense.mvvm.ui.home.depense.dialog.DepenseDialogViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="30dp"
                android:paddingRight="16dp"
                android:paddingBottom="65dp">

                <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/depense_titre" />

                <EditText
                    android:id="@+id/depenseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:gravity="center"
                    android:focusable="false"
                    android:hint="Saisir une date"
                    android:text="@={viewModel.depenseDate}" />

                <Spinner
                    android:id="@+id/categorie"
                    android:onItemSelected="@{(parent,view,pos,id)->viewModel.onSelectItem(parent,view,pos,id)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/budjet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_monetization"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="Montant"
                    android:inputType="numberDecimal|numberSigned"
                    android:text="@={viewModel.montant}" />

                <EditText
                    android:id="@+id/revenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_edit_black_24dp"
                    android:gravity="center"
                    android:hint="Description"
                    android:text="@={viewModel.description}" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnLater"
                    style="@style/Button.Action.Negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:onClick="@{() -> viewModel.onLaterClick()}"
                    android:text="@string/later" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/Button.Action.Positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="@{() -> viewModel.onSubmitClick()}"
                    android:text="@string/submit" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>