<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      https://mindorks.com/license/apache-v2
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mindorks.framework.mvvm.ui.feed.dashboard.DashboardViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="65dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="30dp">

                <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/prevision_titre" />

                <!--<RatingBar-->
                    <!--android:id="@+id/ratingBarFeedback"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_marginTop="20dp"-->
                    <!--android:numStars="5"-->
                    <!--android:stepSize="1"-->
                    <!--tools:rating="3" />-->

                <EditText
                    android:id="@+id/champ_date_valeur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Saisir une date"
                    android:layout_gravity="center"
                    android:text="@{viewModel.date}"
                    android:drawableEnd="@drawable/ic_date"
                    android:gravity="center"/>

                <Spinner
                    android:id="@+id/categorie"
                    android:onItemSelected="@{(parent,view,pos,id)->viewModel.onSelectItem(parent,view,pos,id)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/budjet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Budjet"
                    android:layout_gravity="center"
                    android:text="@={viewModel.montant}"
                    android:drawableEnd="@drawable/ic_monetization"
                    android:gravity="center"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnLater"
                    style="@style/Button.Action.Negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:onClick="@{() -> viewModel.onLaterClick()}"
                    android:text="@string/later" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/Button.Action.Positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="@{() -> viewModel.onSubmitClick()}"
                    android:text="@string/submit" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>