<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.depense.mvvm.ui.login.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.project.depense.mvvm.ui.login.LoginViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/activityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="80dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="80dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_logo" />

                        <TextView
                            style="@style/TextStyle.Heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:text="@string/app_name"
                            android:textAllCaps="true"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/login"
                                android:text="@={viewModel.login}"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:text="@={viewModel.password}"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btnServerLogin"
                            style="@style/Button.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:onClick="@{() -> viewModel.onServerLoginClick()}"
                            android:padding="10dp"
                            android:text="@string/login"
                            android:textSize="18dp" />

                        <Button
                            android:id="@+id/btn_signup"
                            style="@style/Button.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:padding="10dp"
                            android:backgroundTint="@color/lite_blue"
                            android:text="Sing up"
                            android:onClick="@{() -> viewModel.login()}"
                            android:textAllCaps="false"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>



                <!--<LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="40dp"
                    android:orientation="horizontal">



                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        app:srcCompat="@drawable/ic_google_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:id="@+id/ibFbLogin"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="24dp"
                        android:background="@color/transparent"
                        android:onClick="@{() -> viewModel.onFbLoginClick()}"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_facebook" />
                </LinearLayout>-->

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

    </FrameLayout>

</layout>